--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,6 +16,18 @@ body::-webkit-scrollbar-track {
     opacity: 0;
 }
 
+::-webkit-scrollbar {
+    width: 2px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.2);
+}
+::-webkit-scrollbar-track {
+    border-radius: 0;
+    background: rgba(0, 0, 0, 0.1);
+}
+
 * {
     -webkit-user-select: none;
     -moz-user-select: none;
