--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -76,6 +76,14 @@ html::-webkit-scrollbar {
     width: 3px;
 }
 
+#app {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    position: relative;
+    background-color: #f8f8f8;
+}
+
 #NOVCONSOLE div[id='__vconsole'] {
     display: none;
 }
